--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,22 +1,19 @@
-<h1>Edit Books</h1>
-<form action="/edit/{{product.id}}" method="POST">
-<div>
-    <label for="name"Name></label>
-    <input type="text" id="name" name="name" value="{{product.name}}"required>
-</div>
-<div>
-    <label for="price">Price</label>
-    <input type="number" name="price" id=""price value="{{product.price}}">
-</div>
-<div>
-    <button type="submit">Update</button>  
-</div>
-</form>
-<a href="/">Back</a>
-
-
-
-
-
-
-</form>
+<body>
+  <div class="edit-form-container">
+    <h1>Edit Books</h1>
+    <form class="edit-form" action="/edit/{{product.id}}" method="POST">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" value="{{product.name}}" required>
+      </div>
+      <div>
+        <label for="price">Price</label>
+        <input type="number" id="price" name="price" value="{{product.price}}">
+      </div>
+      <div>
+        <button type="submit">Update</button>
+      </div>
+    </form>
+    <a href="/">Back</a>
+  </div>
+</body>
