--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,7 +1,7 @@
 <body class="add-page">
-  <h1 class="add-Products">Add Products</h1>
   <div class="form-container">
     <form class="add-form" action="/add" method="POST">
+      <h1 class="add-products">Add Products</h1>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
       <label for="price">Price:</label>
