--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,20 @@
     <title>Crud Handlebars</title>
 </head>
 <body>
+
+    <!-- Navbar dinâmica -->
+    <nav>
+        <a href="/">Home</a>
+        {{#if isAuthenticated}}
+            <a href="/logout">Logout</a>
+        {{else}}
+            <a href="/login">Login</a>
+            <a href="/register">Registrar</a>
+        {{/if}}
+    </nav>
+
+    <!-- Conteúdo da página -->
     {{{body}}}
+
 </body>
 </html>
